# supabase-cpp

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/workflows/: docs.yml
_sources/: index.rst.txt
cmake/: FindSphinx.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py
include/supabasecpp/: supabaseClient.h
src/: CMakeLists.txt  supabaseClient.cpp
